crates/voom-cli/tests/snapshots/compliance_envelope__report_outputs_compliance_report_envelope.snap
---
source: crates/voom-cli/tests/compliance_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "compliance",
  "status": "ok",
  "data": {
    "plan": {
      "schema_version": 1,
      "plan_id": "plan_d3221cffe1d55f8d",
      "plan_hash": "blake3:d3221cffe1d55f8d38bddae40db33d327bd9563df7d3de1de4690e0bec1dba54",
      "policy": {
        "slug": "container-metadata",
        "source_hash": "efc80d0415953f5ed3fa23a052d98561c4153bbfb346f579ccf9270281c1f89b",
        "document_id": 1,
        "version_id": 1
      },
      "input": {
        "slug": "synthetic-noncompliant-transcode-needed",
        "input_set_id": 1,
        "fixture_labels": [
          "synthetic_noncompliant_transcode_needed"
        ]
      },
      "summary": {
        "total_node_count": 4,
        "executable_node_count": 1,
        "no_op_node_count": 0,
        "blocked_node_count": 3,
        "target_count": 1,
        "operation_counts_by_kind": {
          "clear_tags": 1,
          "delete_tag": 1,
          "remux": 1,
          "set_tag": 1
        }
      },
      "nodes": [
        {
          "node_id": "node_a2985ff8ff45d281",
          "phase_name": "normalize",
          "ordinal": 0,
          "target": {
            "type": "synthetic",
            "key": "variant-1",
            "kind": "media_variant"
          },
          "operation_kind": "remux",
          "operation_payload": {
            "type": "remux",
            "container": "mkv",
            "track_actions": [],
            "track_order": [
              "video",
              "audio",
              "subtitle"
            ],
            "defaults": []
          },
          "observed_state": {
            "container": "mp4"
          },
          "status": "planned",
          "status_reason": "container mp4 will be changed to mkv",
          "capability_hints": {
            "operation_capability": "remux_container"
          },
          "scheduling_hints": {
            "priority_class": "normal",
            "estimated_cpu_class": "unknown",
            "estimated_gpu_class": "none",
            "estimated_disk_bytes": "unknown",
            "estimated_network_bytes": "unknown",
            "expected_duration": "unknown",
            "concurrency_key": "synthetic:media_variant:variant-1"
          },
          "resource_estimates": {
            "notes": []
          },
          "artifact_expectations": {
            "outputs": []
          },
          "safety_hints": {
            "requires_approval": false,
            "destructive": false
          }
        },
        {
          "node_id": "node_810a976b823236df",
          "phase_name": "normalize",
          "ordinal": 1,
          "target": {
            "type": "synthetic",
            "key": "variant-1",
            "kind": "media_variant"
          },
          "operation_kind": "clear_tags",
          "operation_payload": {
            "type": "clear_tags"
          },
          "status": "blocked",
          "status_reason": "operation is not supported by Sprint 5 planner",
          "capability_hints": {
            "operation_capability": null
          },
          "scheduling_hints": {
            "priority_class": "normal",
            "estimated_cpu_class": "unknown",
            "estimated_gpu_class": "none",
            "estimated_disk_bytes": "unknown",
            "estimated_network_bytes": "unknown",
            "expected_duration": "unknown",
            "concurrency_key": "synthetic:media_variant:variant-1"
          },
          "resource_estimates": {
            "notes": []
          },
          "artifact_expectations": {
            "outputs": []
          },
          "safety_hints": {
            "requires_approval": false,
            "destructive": false
          }
        },
        {
          "node_id": "node_49b773aa85d91815",
          "phase_name": "normalize",
          "ordinal": 2,
          "target": {
            "type": "synthetic",
            "key": "variant-1",
            "kind": "media_variant"
          },
          "operation_kind": "set_tag",
          "operation_payload": {
            "type": "set_tag",
            "key": "title",
            "value": {
              "type": "field_path",
              "path": [
                "identity",
                "title"
              ]
            }
          },
          "status": "blocked",
          "status_reason": "operation is not supported by Sprint 5 planner",
          "capability_hints": {
            "operation_capability": null
          },
          "scheduling_hints": {
            "priority_class": "normal",
            "estimated_cpu_class": "unknown",
            "estimated_gpu_class": "none",
            "estimated_disk_bytes": "unknown",
            "estimated_network_bytes": "unknown",
            "expected_duration": "unknown",
            "concurrency_key": "synthetic:media_variant:variant-1"
          },
          "resource_estimates": {
            "notes": []
          },
          "artifact_expectations": {
            "outputs": []
          },
          "safety_hints": {
            "requires_approval": false,
            "destructive": false
          }
        },
        {
          "node_id": "node_41195a59cc88f9d4",
          "phase_name": "normalize",
          "ordinal": 3,
          "target": {
            "type": "synthetic",
            "key": "variant-1",
            "kind": "media_variant"
          },
          "operation_kind": "delete_tag",
          "operation_payload": {
            "type": "delete_tag",
            "key": "encoder"
          },
          "status": "blocked",
          "status_reason": "operation is not supported by Sprint 5 planner",
          "capability_hints": {
            "operation_capability": null
          },
          "scheduling_hints": {
            "priority_class": "normal",
            "estimated_cpu_class": "unknown",
            "estimated_gpu_class": "none",
            "estimated_disk_bytes": "unknown",
            "estimated_network_bytes": "unknown",
            "expected_duration": "unknown",
            "concurrency_key": "synthetic:media_variant:variant-1"
          },
          "resource_estimates": {
            "notes": []
          },
          "artifact_expectations": {
            "outputs": []
          },
          "safety_hints": {
            "requires_approval": false,
            "destructive": false
          }
        }
      ],
      "edges": [],
      "warnings": [],
      "diagnostics": [
        {
          "severity": "error",
          "code": "unsupported_operation_for_sprint5",
          "message": "operation is not supported by Sprint 5 planner",
          "target": {
            "type": "synthetic",
            "key": "variant-1",
            "kind": "media_variant"
          },
          "phase_name": "normalize",
          "operation_kind": "clear_tags"
        },
        {
          "severity": "error",
          "code": "unsupported_operation_for_sprint5",
          "message": "operation is not supported by Sprint 5 planner",
          "target": {
            "type": "synthetic",
            "key": "variant-1",
            "kind": "media_variant"
          },
          "phase_name": "normalize",
          "operation_kind": "set_tag"
        },
        {
          "severity": "error",
          "code": "unsupported_operation_for_sprint5",
          "message": "operation is not supported by Sprint 5 planner",
          "target": {
            "type": "synthetic",
            "key": "variant-1",
            "kind": "media_variant"
          },
          "phase_name": "normalize",
          "operation_kind": "delete_tag"
        }
      ],
      "provenance": {
        "planner": "voom-plan",
        "format": "sprint5-v1"
      }
    },
    "report": {
      "schema_version": 1,
      "report_id": "report_8f639ac8edfd19a1",
      "report_hash": "blake3:1400c3a38ef22a61b104ed5fcee3359015f6da8548d8cc77dc99c065afc3992f",
      "plan_id": "plan_d3221cffe1d55f8d",
      "plan_hash": "blake3:d3221cffe1d55f8d38bddae40db33d327bd9563df7d3de1de4690e0bec1dba54",
      "policy": {
        "slug": "container-metadata",
        "source_hash": "efc80d0415953f5ed3fa23a052d98561c4153bbfb346f579ccf9270281c1f89b",
        "document_id": 1,
        "version_id": 1
      },
      "input": {
        "slug": "synthetic-noncompliant-transcode-needed",
        "input_set_id": 1,
        "fixture_labels": [
          "synthetic_noncompliant_transcode_needed"
        ]
      },
      "summary": {
        "status": "mixed",
        "total_check_count": 4,
        "compliant_check_count": 0,
        "noncompliant_check_count": 1,
        "blocked_check_count": 3,
        "executable_check_count": 1,
        "operation_counts_by_kind": {
          "clear_tags": 1,
          "delete_tag": 1,
          "remux": 1,
          "set_tag": 1
        }
      },
      "checks": [
        {
          "check_id": "check_b830334e72bb02d8",
          "node_id": "node_a2985ff8ff45d281",
          "target": {
            "type": "synthetic",
            "key": "variant-1",
            "kind": "media_variant"
          },
          "compliance_kind": "container",
          "operation_kind": "remux",
          "desired_state": {
            "type": "remux",
            "container": "mkv",
            "track_actions": [],
            "track_order": [
              "video",
              "audio",
              "subtitle"
            ],
            "defaults": []
          },
          "observed_state": {
            "container": "mp4"
          },
          "check_status": "noncompliant",
          "reason": "container mp4 will be changed to mkv",
          "issue_action_hint": "create_or_update_planned",
          "execution_eligibility": "supported"
        },
        {
          "check_id": "check_ce84ac6156bcae92",
          "node_id": "node_810a976b823236df",
          "target": {
            "type": "synthetic",
            "key": "variant-1",
            "kind": "media_variant"
          },
          "compliance_kind": "unsupported",
          "operation_kind": "clear_tags",
          "desired_state": {
            "type": "clear_tags"
          },
          "check_status": "blocked",
          "reason": "operation is not supported by Sprint 5 planner",
          "issue_action_hint": "none",
          "execution_eligibility": "unsupported"
        },
        {
          "check_id": "check_8f93566e9c16fa26",
          "node_id": "node_49b773aa85d91815",
          "target": {
            "type": "synthetic",
            "key": "variant-1",
            "kind": "media_variant"
          },
          "compliance_kind": "unsupported",
          "operation_kind": "set_tag",
          "desired_state": {
            "type": "set_tag",
            "key": "title",
            "value": {
              "type": "field_path",
              "path": [
                "identity",
                "title"
              ]
            }
          },
          "check_status": "blocked",
          "reason": "operation is not supported by Sprint 5 planner",
          "issue_action_hint": "none",
          "execution_eligibility": "unsupported"
        },
        {
          "check_id": "check_cc7004cdb8356067",
          "node_id": "node_41195a59cc88f9d4",
          "target": {
            "type": "synthetic",
            "key": "variant-1",
            "kind": "media_variant"
          },
          "compliance_kind": "unsupported",
          "operation_kind": "delete_tag",
          "desired_state": {
            "type": "delete_tag",
            "key": "encoder"
          },
          "check_status": "blocked",
          "reason": "operation is not supported by Sprint 5 planner",
          "issue_action_hint": "none",
          "execution_eligibility": "unsupported"
        }
      ],
      "diagnostics": [
        {
          "severity": "warning",
          "code": "unsupported_compliance_operation",
          "message": "operation clear_tags is not supported by compliance reports",
          "plan_id": "plan_d3221cffe1d55f8d",
          "node_id": "node_810a976b823236df",
          "check_id": "check_ce84ac6156bcae92",
          "target": {
            "type": "synthetic",
            "key": "variant-1",
            "kind": "media_variant"
          }
        },
        {
          "severity": "warning",
          "code": "unsupported_compliance_operation",
          "message": "operation set_tag is not supported by compliance reports",
          "plan_id": "plan_d3221cffe1d55f8d",
          "node_id": "node_49b773aa85d91815",
          "check_id": "check_8f93566e9c16fa26",
          "target": {
            "type": "synthetic",
            "key": "variant-1",
            "kind": "media_variant"
          }
        },
        {
          "severity": "warning",
          "code": "unsupported_compliance_operation",
          "message": "operation delete_tag is not supported by compliance reports",
          "plan_id": "plan_d3221cffe1d55f8d",
          "node_id": "node_41195a59cc88f9d4",
          "check_id": "check_cc7004cdb8356067",
          "target": {
            "type": "synthetic",
            "key": "variant-1",
            "kind": "media_variant"
          }
        }
      ],
      "provenance": {
        "reporter": "voom-plan",
        "format": "sprint6-v1"
      }
    },
    "backups": []
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
