crates/voom-cli/tests/snapshots/compliance_envelope__report_unknown_job_id_uses_not_found.snap
---
source: crates/voom-cli/tests/compliance_envelope.rs
assertion_line: 231
expression: json
---
{
  "schema_version": "0",
  "command": "compliance",
  "status": "error",
  "data": null,
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "NOT_FOUND",
    "message": "not found: workflow summary for job 999999 not found"
  }
}
